# hexlet_pytest

./: pyproject.toml
hexlet_pytest/: stack_example.py
tests/: test_stack_example.py
